[tool.poetry]
name = "nye-cache-py"
version = "0.1.1a0"
description = ""
authors = ["Andy Hoang <ngocdunghoangdl@gmail.com>"]
readme = "README.md"
packages = [{include = "nye_cache"}]

[tool.poetry.dependencies]
python = "^3.10"
cachetools = "^5.3.0"
funcy = "^2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
tox = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
