[tool.poetry]
name = "nye-cache-py"
version = "0.0.2"
description = ""
authors = ["Andy Hoang <ngocdunghoangdl@gmail.com>"]
readme = "README.md"
packages = [{include = "nye_cache"}]

[tool.poetry.dependencies]
python = "^3.10"
cachetools = "^5.3.0"
funcy = "^2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
tox = "^4.5.2"
coverage = "^7.2.7"
commitizen = "^3.2.2"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
